2005-10-24 Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* setup.py: bumped version to 0.7.2, since data model has undergone some
	changes.
	* gaphor/UML/uml2.gaphor: added taggedValue to NamedElement as 0..*.
	* gaphor/storage.py, gaphor/UML/umllex.py,
	gaphor/diagram/association.py, gaphor/diagram/attribute.py,
	gaphor/diagram/diagramline.py, gaphor/diagram/operation.py:
	Changed to support NamedElement.taggedValue[*].
	* utils/genUML2.py: parse new taggedValues properly.

2005-10-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/util.py: added functions which
		- determine subject's class of fork and decision UI elements
		- combine or decombine fork/join and decision/merge nodes in case
		  of many incoming and outgoig flows
	* gaphor/diagram/activitynodes.py: store information about combined
	fork/decision nodes; support for ordering of object nodes
	* gaphor/diagram/flow.py: determine fork/decision node subject's class
	and/or combine/decombine nodes according to UML specs
	* gaphor/UML/uml2.gaphor: added complete activities package with
	object nodes diagram to support ordering of object nodes

2005-10-17  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/activitynodes.py: implemented object node
	* gaphor/diagram/flow.py: change control flow to object flow
	when source or target is connected to object node
	* gaphor/diagram/nameditem.py, gaphor/diagram/usecase.py: created
	SimpleNamedItem for named item UI elements, which contain just name
	and border (like use case, object, etc.)

2005-10-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	* gaphor/data/plugins/kidexport/plugin.xml: added module dependency kid.

2005-10-10  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.gaphor: added Flow Final, Fork and Join nodes to
	Control nodes diagram
	* gaphor/diagram/activitynodes.py: implemented Flow Final and Fork
	nodes

2005-10-09  Jeroen Vloothuis  <jeroen@vloothuis.net>
	* gaphor/data/plugins/kidexport: New template based exported for XMI
